<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.br.introduction.presentation.intro.IntroViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:contentDescription="@string/content_description_viewpager_carousel">

        <ImageView
            android:id="@+id/imageViewElementLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="-140dp"
            android:layout_marginStart="-140dp"
            android:layout_marginTop="103dp"
            android:src="@mipmap/bg_element_left" />

        <ImageView
            android:id="@+id/imageViewElementRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="-160dp"
            android:layout_marginRight="-160dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/bg_element_right" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="102dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_logo_intro"
            android:src="@mipmap/logo_white" />

        <com.br.introduction.presentation.customviews.Pagination
            android:id="@+id/pagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            app:circleSize="12dp"
            app:count="3"
            app:space="10dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="86dp"
            android:importantForAccessibility="no"
            android:layout_below="@+id/pagination"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:onClick="@{viewModel::onButtonAccessAccountClick}"
                android:text="@string/access_account" />

            <Button
                style="@style/ButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onButtonCreateAccountClick}"
                android:text="@string/create_account" />

        </LinearLayout>

    </RelativeLayout>
</layout>